going back to default

--- a/Week_1/Reading_Files_In_Pandas.ipynb
+++ b/Week_1/Reading_Files_In_Pandas.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "011c2a68",
    "metadata": {},
    "outputs": [
@@ -26,17 +26,17 @@
          "type": "integer"
         },
         {
-         "name": "0",
+         "name": "Country",
          "rawType": "object",
          "type": "string"
         },
         {
-         "name": "1",
+         "name": "Region",
          "rawType": "object",
          "type": "string"
         }
        ],
-       "ref": "d01b1341-77db-4fed-a456-f041bf009ff9",
+       "ref": "4850cbd6-01e3-4152-a906-0d57a045050d",
        "rows": [
         [
          "0",
@@ -313,8 +313,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>Region</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -379,7 +379,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                   0                                    1\n",
+       "             Country                               Region\n",
        "0            Country                               Region\n",
        "1       Afghanistan         ASIA (EX. NEAR EAST)         \n",
        "2           Albania   EASTERN EUROPE                     \n",
@@ -395,13 +395,13 @@
        "[228 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.csv\", header = None )\n"
+    "pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.csv\", header = None, names = ['Country', 'Region'] )\n"
    ]
   },
   {
