defining the data frame

--- a/Week_1/Reading_Files_In_Pandas.ipynb
+++ b/Week_1/Reading_Files_In_Pandas.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "011c2a68",
    "metadata": {},
    "outputs": [
@@ -401,7 +401,7 @@
     }
    ],
    "source": [
-    "pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.csv\", header = None, names = ['Country', 'Region'] )\n"
+    "df = pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.csv\")\n"
    ]
   },
   {
