adding my comments

--- a/Week_1/Reading_Files_In_Pandas.ipynb
+++ b/Week_1/Reading_Files_In_Pandas.ipynb
@@ -36,262 +36,262 @@
          "type": "string"
         }
        ],
-       "ref": "4850cbd6-01e3-4152-a906-0d57a045050d",
+       "ref": "ae464895-d210-495a-a787-94a17c26356e",
        "rows": [
         [
          "0",
-         "Country",
-         "Region"
-        ],
-        [
-         "1",
          "Afghanistan ",
          "ASIA (EX. NEAR EAST)         "
         ],
         [
-         "2",
+         "1",
          "Albania ",
          "EASTERN EUROPE                     "
         ],
         [
-         "3",
+         "2",
          "Algeria ",
          "NORTHERN AFRICA                    "
         ],
         [
-         "4",
+         "3",
          "American Samoa ",
          "OCEANIA                            "
         ],
         [
-         "5",
+         "4",
          "Andorra ",
          "WESTERN EUROPE                     "
         ],
         [
-         "6",
+         "5",
          "Angola ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "7",
+         "6",
          "Anguilla ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "8",
+         "7",
          "Antigua & Barbuda ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "9",
+         "8",
          "Argentina ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "10",
+         "9",
          "Armenia ",
          "C.W. OF IND. STATES "
         ],
         [
-         "11",
+         "10",
          "Aruba ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "12",
+         "11",
          "Australia ",
          "OCEANIA                            "
         ],
         [
-         "13",
+         "12",
          "Austria ",
          "WESTERN EUROPE                     "
         ],
         [
-         "14",
+         "13",
          "Azerbaijan ",
          "C.W. OF IND. STATES "
         ],
         [
-         "15",
+         "14",
          "Bahamas, The ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "16",
+         "15",
          "Bahrain ",
          "NEAR EAST                          "
         ],
         [
-         "17",
+         "16",
          "Bangladesh ",
          "ASIA (EX. NEAR EAST)         "
         ],
         [
-         "18",
+         "17",
          "Barbados ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "19",
+         "18",
          "Belarus ",
          "C.W. OF IND. STATES "
         ],
         [
-         "20",
+         "19",
          "Belgium ",
          "WESTERN EUROPE                     "
         ],
         [
-         "21",
+         "20",
          "Belize ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "22",
+         "21",
          "Benin ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "23",
+         "22",
          "Bermuda ",
          "NORTHERN AMERICA                   "
         ],
         [
-         "24",
+         "23",
          "Bhutan ",
          "ASIA (EX. NEAR EAST)         "
         ],
         [
-         "25",
+         "24",
          "Bolivia ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "26",
+         "25",
          "Bosnia & Herzegovina ",
          "EASTERN EUROPE                     "
         ],
         [
-         "27",
+         "26",
          "Botswana ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "28",
+         "27",
          "Brazil ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "29",
+         "28",
          "British Virgin Is. ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "30",
+         "29",
          "Brunei ",
          "ASIA (EX. NEAR EAST)         "
         ],
         [
-         "31",
+         "30",
          "Bulgaria ",
          "EASTERN EUROPE                     "
         ],
         [
-         "32",
+         "31",
          "Burkina Faso ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "33",
+         "32",
          "Burma ",
          "ASIA (EX. NEAR EAST)         "
         ],
         [
-         "34",
+         "33",
          "Burundi ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "35",
+         "34",
          "Cambodia ",
          "ASIA (EX. NEAR EAST)         "
         ],
         [
-         "36",
+         "35",
          "Cameroon ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "37",
+         "36",
          "Canada ",
          "NORTHERN AMERICA                   "
         ],
         [
-         "38",
+         "37",
          "Cape Verde ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "39",
+         "38",
          "Cayman Islands ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "40",
+         "39",
          "Central African Rep. ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "41",
+         "40",
          "Chad ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "42",
+         "41",
          "Chile ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "43",
+         "42",
          "China ",
          "ASIA (EX. NEAR EAST)         "
         ],
         [
-         "44",
+         "43",
          "Colombia ",
          "LATIN AMER. & CARIB    "
         ],
         [
-         "45",
+         "44",
          "Comoros ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "46",
+         "45",
          "Congo, Dem. Rep. ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "47",
+         "46",
          "Congo, Repub. of the ",
          "SUB-SAHARAN AFRICA                 "
         ],
         [
-         "48",
+         "47",
          "Cook Islands ",
          "OCEANIA                            "
         ],
         [
-         "49",
+         "48",
          "Costa Rica ",
          "LATIN AMER. & CARIB    "
+        ],
+        [
+         "49",
+         "Cote d'Ivoire ",
+         "SUB-SAHARAN AFRICA                 "
         ]
        ],
        "shape": {
         "columns": 2,
-        "rows": 228
+        "rows": 227
        }
       },
       "text/html": [
@@ -320,28 +320,28 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Country</td>\n",
-       "      <td>Region</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
        "      <td>Afghanistan</td>\n",
        "      <td>ASIA (EX. NEAR EAST)</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <th>1</th>\n",
        "      <td>Albania</td>\n",
        "      <td>EASTERN EUROPE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <th>2</th>\n",
        "      <td>Algeria</td>\n",
        "      <td>NORTHERN AFRICA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <th>3</th>\n",
        "      <td>American Samoa</td>\n",
        "      <td>OCEANIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andorra</td>\n",
+       "      <td>WESTERN EUROPE</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -349,59 +349,61 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>223</th>\n",
+       "      <th>222</th>\n",
        "      <td>West Bank</td>\n",
        "      <td>NEAR EAST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>224</th>\n",
+       "      <th>223</th>\n",
        "      <td>Western Sahara</td>\n",
        "      <td>NORTHERN AFRICA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>225</th>\n",
+       "      <th>224</th>\n",
        "      <td>Yemen</td>\n",
        "      <td>NEAR EAST</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>226</th>\n",
+       "      <th>225</th>\n",
        "      <td>Zambia</td>\n",
        "      <td>SUB-SAHARAN AFRICA</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>227</th>\n",
+       "      <th>226</th>\n",
        "      <td>Zimbabwe</td>\n",
        "      <td>SUB-SAHARAN AFRICA</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>228 rows × 2 columns</p>\n",
+       "<p>227 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "             Country                               Region\n",
-       "0            Country                               Region\n",
-       "1       Afghanistan         ASIA (EX. NEAR EAST)         \n",
-       "2           Albania   EASTERN EUROPE                     \n",
-       "3           Algeria   NORTHERN AFRICA                    \n",
-       "4    American Samoa   OCEANIA                            \n",
+       "0       Afghanistan         ASIA (EX. NEAR EAST)         \n",
+       "1           Albania   EASTERN EUROPE                     \n",
+       "2           Algeria   NORTHERN AFRICA                    \n",
+       "3    American Samoa   OCEANIA                            \n",
+       "4           Andorra   WESTERN EUROPE                     \n",
        "..               ...                                  ...\n",
-       "223       West Bank   NEAR EAST                          \n",
-       "224  Western Sahara   NORTHERN AFRICA                    \n",
-       "225           Yemen   NEAR EAST                          \n",
-       "226          Zambia   SUB-SAHARAN AFRICA                 \n",
-       "227        Zimbabwe   SUB-SAHARAN AFRICA                 \n",
+       "222       West Bank   NEAR EAST                          \n",
+       "223  Western Sahara   NORTHERN AFRICA                    \n",
+       "224           Yemen   NEAR EAST                          \n",
+       "225          Zambia   SUB-SAHARAN AFRICA                 \n",
+       "226        Zimbabwe   SUB-SAHARAN AFRICA                 \n",
        "\n",
-       "[228 rows x 2 columns]"
+       "[227 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.csv\")\n"
+    "#df = Data Frame \n",
+    "df = pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.csv\")\n",
+    "df #how you call the data frame\n"
    ]
   },
   {
