adding txt file

--- a/Week_1/Reading_Files_In_Pandas.ipynb
+++ b/Week_1/Reading_Files_In_Pandas.ipynb
@@ -402,17 +402,340 @@
    ],
    "source": [
     "#df = Data Frame \n",
+    "#read_cvs to pull CVS files\n",
     "df = pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.csv\")\n",
     "df #how you call the data frame\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e1a59d4e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "Country\tRegion",
+         "rawType": "object",
+         "type": "string"
+        }
+       ],
+       "ref": "66be4fec-193f-4863-9393-cfb88f85d8e4",
+       "rows": [
+        [
+         "0",
+         "Afghanistan \tASIA (EX. NEAR EAST)         "
+        ],
+        [
+         "1",
+         "Albania \tEASTERN EUROPE                     "
+        ],
+        [
+         "2",
+         "Algeria \tNORTHERN AFRICA                    "
+        ],
+        [
+         "3",
+         "American Samoa \tOCEANIA                            "
+        ],
+        [
+         "4",
+         "Andorra \tWESTERN EUROPE                     "
+        ],
+        [
+         "5",
+         "Angola \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "6",
+         "Anguilla \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "7",
+         "Antigua & Barbuda \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "8",
+         "Argentina \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "9",
+         "Armenia \tC.W. OF IND. STATES "
+        ],
+        [
+         "10",
+         "Aruba \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "11",
+         "Australia \tOCEANIA                            "
+        ],
+        [
+         "12",
+         "Austria \tWESTERN EUROPE                     "
+        ],
+        [
+         "13",
+         "Azerbaijan \tC.W. OF IND. STATES "
+        ],
+        [
+         "14",
+         "Bahamas, The \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "15",
+         "Bahrain \tNEAR EAST                          "
+        ],
+        [
+         "16",
+         "Bangladesh \tASIA (EX. NEAR EAST)         "
+        ],
+        [
+         "17",
+         "Barbados \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "18",
+         "Belarus \tC.W. OF IND. STATES "
+        ],
+        [
+         "19",
+         "Belgium \tWESTERN EUROPE                     "
+        ],
+        [
+         "20",
+         "Belize \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "21",
+         "Benin \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "22",
+         "Bermuda \tNORTHERN AMERICA                   "
+        ],
+        [
+         "23",
+         "Bhutan \tASIA (EX. NEAR EAST)         "
+        ],
+        [
+         "24",
+         "Bolivia \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "25",
+         "Bosnia & Herzegovina \tEASTERN EUROPE                     "
+        ],
+        [
+         "26",
+         "Botswana \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "27",
+         "Brazil \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "28",
+         "British Virgin Is. \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "29",
+         "Brunei \tASIA (EX. NEAR EAST)         "
+        ],
+        [
+         "30",
+         "Bulgaria \tEASTERN EUROPE                     "
+        ],
+        [
+         "31",
+         "Burkina Faso \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "32",
+         "Burma \tASIA (EX. NEAR EAST)         "
+        ],
+        [
+         "33",
+         "Burundi \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "34",
+         "Cambodia \tASIA (EX. NEAR EAST)         "
+        ],
+        [
+         "35",
+         "Cameroon \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "36",
+         "Canada \tNORTHERN AMERICA                   "
+        ],
+        [
+         "37",
+         "Cape Verde \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "38",
+         "Cayman Islands \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "39",
+         "Central African Rep. \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "40",
+         "Chad \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "41",
+         "Chile \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "42",
+         "China \tASIA (EX. NEAR EAST)         "
+        ],
+        [
+         "43",
+         "Colombia \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "44",
+         "Comoros \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "45",
+         "Congo, Dem. Rep. \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "46",
+         "Congo, Repub. of the \tSUB-SAHARAN AFRICA                 "
+        ],
+        [
+         "47",
+         "Cook Islands \tOCEANIA                            "
+        ],
+        [
+         "48",
+         "Costa Rica \tLATIN AMER. & CARIB    "
+        ],
+        [
+         "49",
+         "Cote d'Ivoire \tSUB-SAHARAN AFRICA                 "
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 227
+       }
+      },
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Country\\tRegion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Afghanistan \\tASIA (EX. NEAR EAST)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Albania \\tEASTERN EUROPE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Algeria \\tNORTHERN AFRICA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>American Samoa \\tOCEANIA                      ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Andorra \\tWESTERN EUROPE</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>222</th>\n",
+       "      <td>West Bank \\tNEAR EAST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>223</th>\n",
+       "      <td>Western Sahara \\tNORTHERN AFRICA              ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>224</th>\n",
+       "      <td>Yemen \\tNEAR EAST</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>225</th>\n",
+       "      <td>Zambia \\tSUB-SAHARAN AFRICA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>226</th>\n",
+       "      <td>Zimbabwe \\tSUB-SAHARAN AFRICA</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>227 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                       Country\\tRegion\n",
+       "0          Afghanistan \\tASIA (EX. NEAR EAST)         \n",
+       "1        Albania \\tEASTERN EUROPE                     \n",
+       "2        Algeria \\tNORTHERN AFRICA                    \n",
+       "3    American Samoa \\tOCEANIA                      ...\n",
+       "4        Andorra \\tWESTERN EUROPE                     \n",
+       "..                                                 ...\n",
+       "222    West Bank \\tNEAR EAST                          \n",
+       "223  Western Sahara \\tNORTHERN AFRICA              ...\n",
+       "224        Yemen \\tNEAR EAST                          \n",
+       "225       Zambia \\tSUB-SAHARAN AFRICA                 \n",
+       "226     Zimbabwe \\tSUB-SAHARAN AFRICA                 \n",
+       "\n",
+       "[227 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#read_txt to pull txt files\n",
+    "##read_cvs will still pull txt files, but may not import correctly\n",
+    "df = pd.read_csv(r\"C:\\Users\\tm96\\Documents\\Projects\\Python_Stuff\\Mod_2\\Week_1\\Data_Sets\\countries of the world.txt\")\n",
+    "df \n"
+   ]
   },
   {
    "cell_type": "code",
